# PersonaLLM

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
code_snippets/: search_test.py  test_huggingface_upload.py  test_qdrant.py
deployment/manifests/: evaluating.yaml  feature_engineering.yaml  generate_instruction_datasets.yaml  generate_preference_datasets.yaml  training.yaml
front_end/llm_twin/: README.md  index.html  package-lock.json  package.json  vite.config.js
front_end/llm_twin/src/: App.css  App.jsx  auth.js  index.css
pipelines/: evaluation.py  export_artifact_to_json.py  feature_engineering.py  training.py
scripts/: __init__.py
scripts/etl/: crawl_links.py
scripts/evaluating/: evaluate.py
scripts/export_data/: serialize_artifact.py  to_json.py
scripts/feature_engineering/: __init__.py  clean_documents.py  load_to_vector_db.py  query_data_warehouse.py  rag_by_chunk_and_embed.py
scripts/generate_datasets/: __init__.py  create_prompts.py  generate_instruction_dataset.py  generate_preference_dataset.py  push_to_huggingface.py  query_feature_store.py
scripts/training/: train.py
services/: __init__.py  settings.py
services/application/crawlers/: __init__.py  base_selenium_crawler.py  custom_article.py  github.py  linkedin.py  medium.py
services/application/dataset/: __init__.py  constants.py  generation.py  generation_utils.py  output_parsers.py
services/application/preprocessing/: __init__.py  dispatchers.py
services/application/rag/: prompt_template.py  query_expanison.py  rag_base.py  rag_run.py  reranking.py  retriever.py  self_query.py
services/application/utils/: __init__.py  misc.py
services/domain/: __init__.py  cleaned_documents.py  dataset.py  documents.py  exceptions.py  prompt.py
services/domain/base/: nosql.py  vector.py
services/enums/: __init__.py  document_type.py
services/infrastructure/aws/: inference_pipeline_api.py
services/infrastructure/database_connection/: mongodb.py  qdrant.py
services/infrastructure/file_manager/: __init__.py
services/infrastructure/opik_config/: opik_utils.py
services/model/evaluation/: evaluate.py  (+4 more)
services/network/: base.py  embeddings.py
tests/: test_collection.py
(+31 files in other folders)
