[project]
name = "llm-twin"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed Sherif", email = "as4349124@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "zenml>=0.94.3,<0.95.0",
    "loguru>=0.7.3,<0.8.0",
    "typing-extensions>=4.15.0,<5.0.0",
    "transformers>=5.8.0,<6.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "selenium>=4.44.0",
    "chromedriver-autoinstaller>=0.6.4",
    "langchain-community>=0.4.2",
    "pymongo>=4.17.0",
    "beautifulsoup4>=4.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_twin"]
