[project]
name = "llm-twin"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed Sherif", email = "as4349124@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "zenml>=0.94.3,<0.95.0",
    "loguru>=0.7.3,<0.8.0",
    "typing-extensions>=4.15.0,<5.0.0",
    "transformers>=5.8.0,<6.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "selenium>=4.44.0",
    "chromedriver-autoinstaller>=0.6.4",
    "langchain-community>=0.4.2",
    "pymongo>=4.17.0",
    "beautifulsoup4>=4.14.3",
    "sqlalchemy>=2.0.50",
    "pymysql>=1.2.0",
    "sqlalchemy-utils>=0.42.1",
    "sqlmodel==0.0.18",
    "passlib>=1.7.4",
    "alembic>=1.18.4",
    "fastapi>=0.100,<=0.115.8",
    "uvicorn[standard]>=0.17.5",
    "pyjwt==2.7.*",
    "python-multipart~=0.0.9",
    "jinja2",
    "secure~=1.0.1",
    "cachetools>=5.3.0,<8.0.0",
    "html2text",
    "fastapi-utils",
    "orjson~=3.10.0",
    "ipinfo>=4.4.3",
    "tldextract~=5.1.0",
    "itsdangerous~=2.2.0",
    "croniter>=6.0.0",
    "sentence-transformers>=5.5.1",
    "pillow>=12.2.0",
    "qdrant-client>=1.18.0",
    "langchain-text-splitters>=1.1.2",
    "datasets>=5.0.0",
    "anthropic>=0.109.2",
    "tiktoken>=0.13.0",
    "langchain-openai>=1.3.2",
    "langchain-anthropic>=1.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_twin"]
